horizontal scroll fixed

--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -2,7 +2,7 @@
   position: relative;
   top: 80px;
   width: 100vw;
-  height: 500px;
+  height: 550px;
   /* background-color: red; */
   justify-content: center;
   text-align: center;
