--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 header {
   display: block;
   width: 100vw;
